--- a/Chimnie.ipynb
+++ b/Chimnie.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMQJ/MqNqkkZXAc8eTGwu2N"
+      "authorship_tag": "ABX9TyNtOvl74/JSJYx7LV+7SYn8"
     },
     "kernelspec": {
       "name": "python3",
@@ -2777,6 +2777,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        "\n",
         "Download complete price paid data set from the Land Registry.\n",
         "\n",
         "First, install [aria2c](https://aria2.github.io/) command line utility for multi-connection (faster) downloads."
@@ -3760,12 +3762,12 @@
         "\n",
         "Square root transformation is applied to sale price data for several reasons:\n",
         "\n",
-        " * Normalization: It can help normalise right-skewed distributions.\n",
-        " * Variance stabilization: It can stabilise variance across different price ranges.\n",
-        " * Linearity: It can improve linear relationships between variables.\n",
-        " * Outlier impact reduction: It reduces the impact of extreme high values.\n",
-        " * Statistical assumptions: It helps meet assumptions for many statistical tests.\n",
-        " * Interpretability: The transformed data retains a more intuitive relationship to the original values compared to log transformations."
+        " * **Normalisation**: It can help normalise right-skewed distributions.\n",
+        " * **Variance stabilisation**: It can stabilise variance across different price ranges.\n",
+        " * **Linearity**: It can improve linear relationships between variables.\n",
+        " * **Outlier impact reduction**: It reduces the impact of extreme high values.\n",
+        " * **Statistical assumptions**: It helps meet assumptions for many statistical tests.\n",
+        " * **Interpretability**: The transformed data retains a more intuitive relationship to the original values compared to log transformations."
       ],
       "metadata": {
         "id": "oPN1jX1ZWL_u"
@@ -3807,8 +3809,27 @@
       "cell_type": "markdown",
       "source": [
         "\n",
+        "Discuss which distribution best represents the data.\n",
         "\n",
-        "**TODO** Discuss which distribution best represents the data\n",
+        "The complete price paid data exhibits a right-skewed distribution.  This means there are more lower-priced houses and fewer higher-priced ones, with a long tail extending to the right representing luxury properties.\n",
+        "\n",
+        "There are 2 common distributions to consider:\n",
+        "\n",
+        " 1. **Log-normal distribution**:\n",
+        "It assumes that the logarithm of house prices follows a normal distribution. The log-normal distribution can capture the right-skewness and non-negative nature of house prices.\n",
+        " 2. **Gamma distribution**:\n",
+        "Another right-skewed distribution that can model house prices well. It's flexible and can represent various shapes depending on its parameters.\n",
+        "\n",
+        "The best-fitting distribution may vary over time or across regions.\n",
+        "A mixture of distributions might be more appropriate for nationwide data.\n",
+        "\n",
+        "Based on literature and common practices, the log-normal distribution is sometimes cited as a good representation for house price data.\n",
+        "\n",
+        "To determine which distribution best represents the data:\n",
+        " * Plot the empirical distribution\n",
+        " * Fit different distributions to the data\n",
+        " * Use goodness-of-fit tests (e.g., Kolmogorov-Smirnov)\n",
+        "\n",
         "\n",
         "---\n",
         "\n",
@@ -3825,11 +3846,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "# DEBUG - Delete me\n",
-        "# !rm -f NSPL_2021_MAY_2024.zip\n",
-        "# !rm -rf Data Documents User\\ Guide\n",
-        "\n",
         "!wget 'https://www.arcgis.com/sharing/rest/content/items/f7464f3658ba439ba577651b32014cfe/data' -O 'NSPL_2021_MAY_2024.zip'\n",
         "!unzip NSPL_2021_MAY_2024.zip\n",
         "!awk -F',' '{print $3\",\"$7\",\"$8\",\"$29\",\"$30}' Data/NSPL21_MAY_2024_UK.csv | tr -d '\"' > pcd_os_lat_long.csv\n",
@@ -4379,10 +4395,6 @@
         "# Step 1: Load BNG tiles\n",
         "bng_tiles = gpd.read_file('OSGB_Grid_10km.shp', crs=crs)\n",
         "bng_tiles.set_crs(crs, inplace=True)\n",
-        "# display(bng_tiles)\n",
-        "# display(bng_tiles.crs)\n",
-        "# bng_tiles.plot()\n",
-        "# plt.show()\n",
         "\n",
         "# Step 2: Create a GeoDataFrame from the price paid data including\n",
         "#         OS eastings and northings\n",
@@ -4392,9 +4404,6 @@
         "                                                              DT_ll['osnrth1m'].to_list()[0]),\n",
         "                               'sales': DT_ll['price'].to_list()[0]},\n",
         "                               crs = crs)\n",
-        "# display(sales_data)\n",
-        "# sales_data.plot()\n",
-        "# plt.show()\n",
         "\n",
         "\n",
         "# Step 3: Perform spatial join between sales_data (points) and bng_tiles (polys)\n",
@@ -4404,8 +4413,6 @@
         "    gpd.sjoin(sales_data, bng_tiles).groupby(\"index_right\").size().rename(\"sales_count\"),\n",
         "    how=\"left\",\n",
         ")\n",
-        "# print('sales_grid:')\n",
-        "# display(sales_grid)\n",
         "\n",
         "# Step 4: Plot the map\n",
         "fig, ax = plt.subplots(figsize=(12, 12))\n",
@@ -4443,7 +4450,9 @@
       "source": [
         "## 7.\n",
         "\n",
-        "Plot a map showing the average sale price per 10km grid square."
+        "Plot a map showing the average sale price per 10km grid square.\n",
+        "\n",
+        "**NOTE**: I assume the previous cell has already been ran to generate the `bng_tiles` and `sales_data` dataframes."
       ],
       "metadata": {
         "id": "NfzUv8HbEyNa"
@@ -4459,8 +4468,6 @@
         "    gpd.sjoin(sales_data, bng_tiles).groupby(\"index_right\").mean('sales'),#.rename(\"price_mean\"),\n",
         "    how=\"left\",\n",
         ")\n",
-        "# print('sales_grid:')\n",
-        "# display(sales_grid)\n",
         "\n",
         "# Plot the map\n",
         "fig, ax = plt.subplots(figsize=(12, 12))\n",
@@ -4496,15 +4503,23 @@
     {
       "cell_type": "markdown",
       "source": [
+        "There are 2 notable outliers:\n",
+        " 1. North of Carlise on the Scottish border\n",
+        " 2. West of Cardiff\n",
+        "\n",
+        "These outliers justify further investigation.\n",
+        "\n",
+        "---\n",
+        "\n",
         "## 8.\n",
         "\n",
         "Comment on your findings.\n",
         "\n",
         "House sales tend to be concentrated in and around major urban centers, particularly:\n",
         "\n",
-        " * London and the Southeast: This region typically sees the highest volume of sales and highest average prices.\n",
-        " * Other major cities: Areas like Birmingham, Manchester, Leeds and Cardiff/Bristol also experience significant sales activity.\n",
-        " * Commuter belts: Towns and areas within commuting distance of major cities often have active housing markets.\n",
+        " * **London and the Southeast**: This region typically sees the highest volume of sales and highest average prices.\n",
+        " * **Other major cities**: Areas like Birmingham, Manchester, Leeds and Cardiff/Bristol also experience significant sales activity.\n",
+        " * **Commuter belts**: Towns and areas within commuting distance of major cities often have active housing markets.\n",
         "\n",
         "Rural areas and smaller towns generally have lower volumes of sales compared to urban centers.  Certain coastal areas, especially in the Southwest (e.g., Cornwall, Devon) and parts of Wales, may see sales related to holiday homes and retirement properties.\n",
         "\n",
@@ -4547,7 +4562,7 @@
         " * Floor area\n",
         " * Condition of the property\n",
         " * Construction year\n",
-        " * Crime rates\n",
+        " * Local crime rates\n",
         " * Local amenities (e.g., schools, parks, transportation)\n",
         " * Economic factors (e.g., interest rates, unemployment, inflation)\n",
         "\n",
